# ashare-quant-app

./: .gitignore  README.md  config.example.toml  pyproject.toml
data/: ashare_quant_app.db
src/ashare_quant_app/: __init__.py  config.py  data.py  main.py  models.py  storage.py
src/ashare_quant_app/broker/: __init__.py  base.py  sim.py  xtquant.py
src/ashare_quant_app/engine/: __init__.py  backtest.py  live.py  risk.py
src/ashare_quant_app/strategies/: base.py  moving_average.py
src/ashare_quant_app/ui/: charts.py  main_window.py
tests/: test_backtest.py  test_broker_sim.py  test_data.py  test_risk.py  test_storage.py
