[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-quant-app"
version = "0.1.0"
description = "A local A-share quantitative trading desktop app inspired by vn.py and other popular quant tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Assistant" }
]
dependencies = [
  "PySide6>=6.8.0",
  "akshare>=1.17.0",
  "easyquotation>=0.7.7",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.12.0",
]

[project.scripts]
ashare-quant-app = "ashare_quant_app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
